# kdeconnect-sms-tui

./: CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  flake.nix
.github/workflows/: release.yml
src/: app.rs  config.rs  contacts.rs  events.rs  main.rs  state.rs
src/dbus/: conversations.rs  daemon.rs  mod.rs  signals.rs  types.rs
src/models/: attachment.rs  conversation.rs  device.rs  message.rs  mod.rs
src/ui/: compose.rs  conversation_list.rs  device_bar.rs  device_popup.rs  file_picker_popup.rs  folder_popup.rs  group_info_popup.rs  help_popup.rs  message_view.rs  mod.rs  test_helpers.rs  theme.rs
