[package]
name = "kdeconnect-sms-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for sending/receiving SMS via KDE Connect"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults", "serde", "tokio"] }
image = "0.25"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1"
unicode-width = "0.2"
dirs = "6"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
futures-lite = "2"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
